--- a/myStack/admin/views/register.ejs
+++ b/myStack/admin/views/register.ejs
@@ -22,7 +22,7 @@
                     </div>
                     <div class="col-lg-6">
                         <div class="card2 card border-0 px-4 py-5">
-                            <form method="POST" action="/createUser">
+                            <form method="POST" action="/registerUser">
                                 <div class="row px-3"> <label class="mb-1">
                                     <h6 class="mb-0 text-sm">Email Address</h6>
                                 </label> <input class="mb-4" type="text" name="email" placeholder="Enter a valid email address"> </div>
