Completed container launch feature.

--- a/myStack/admin/public/css/auth.css
+++ b/myStack/admin/public/css/auth.css
@@ -146,7 +146,7 @@ a {
 
 .bg-blue {
     color: #fff;
-    background-color: #1A237E
+    background-color: #0069d9;
 }
 
 @media screen and (max-width: 991px) {
