--- a/myStack/admin/views/index.ejs
+++ b/myStack/admin/views/index.ejs
@@ -39,14 +39,15 @@
                     </div>
                     <div class="card-body" style="overflow-y: auto">
                         <h4 class="card-title">Tomstack</h4>
-                        <p class="card-text">Card has minimum height set but will expand if more space is needed for
-                            card body content. You can use Bootstrap <a
-                                href="https://getbootstrap.com/docs/4.0/components/card/#card-decks"
-                                target="_blank">card-decks</a> to align multiple cards nicely in a row.</p>
+                        <p class="card-text">
+                            Apache Tomcat is a free and open-source implementation of the Jakarta Servlet, Jakarta Expression Language,
+                            and WebSocket technologies. Tomcat provides a "pure Java" HTTP web server environment in which Java code can run.
+                        </p>
                     </div>
                     <div class="card-footer" style="background: inherit; border-color: inherit;">
                         <a href="#" class="tag">Tomcat</a>
                         <a href="#" class="tag">MySql</a>
+                        <a href="#" class="tag">Firefox</a>
                         <br>
                         <a href="/launchStack?stack=TOM" class="btn btn-primary" style="display: block;">Launch</a>
                     </div>
