--- a/myStack/admin/views/index.ejs
+++ b/myStack/admin/views/index.ejs
@@ -6,55 +6,98 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./css/index.css">
-    <link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta/css/bootstrap.min.css" />
-    <title>Home</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,500&amp;subset=latin-ext" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+    <title>Home</title>
 </head>
 
-<style>
-    html {
-        font-size: 14px;
-    }
-
-    .container {
-        font-size: 14px;
-        color: #666666;
-        font-family: "Open Sans";
-    }
-</style>
-
 <body>
-    <div class="container">
-        <p class="banner">Choose your stack</p>
-        <div class="line"></div>
-        <div class="row pt-5 m-auto">
-            <div class="col-md-6 col-lg-4 pb-3">
-                <div class="card card-custom bg-white border-white border-0">
-                    <div class="card-custom-img" style="background-image: url(./img/techstack.png);"></div>
-                    <div class="card-custom-avatar">
-                        <img class="img-fluid" src="https://www.itzgeek.com/wp-content/uploads/2014/03/Tomcat-Logo.jpg"
-                            alt="Avatar" />
+    <div class="loading-div spinner-grow text-primary" id="loading"></div>
+    <div class="container-fluid">
+      <div class="row">
+          <div class="col-md-3 col-sm-0 sideData">
+              <div class="section_our_solution">
+                  <div class="row">
+                    <div class="col-lg-12 col-md-12 col-sm-12">
+                      <br><br>
+                      <p class="banner">Running Instances</p>
+                      <div class="line"></div>
+                      <br>
+                      <div class="our_solution_category">
+                        <div class="solution_cards_box">
+                          <%
+                            if (instances.length == 0) {
+                          %>
+                          <h4 class="no_instance">No running instances</h4>
+                          <%
+                            }
+                            else {
+                              for (var x = 0; x < instances.length; x++) {
+                          %>
+                            <div class="solution_card">
+                              <div class="hover_color_bubble"></div>
+                              <div class="so_top_icon">
+                                <img src="<%=instances[x].icon%> ">
+                              </div>
+                              <div class="solu_title">
+                                <h3 class="stackName"><b><%=instances[x].stackName%></b></h3>
+                              </div>
+                              <div class="solu_description">
+                                <p>
+                                  <b>Creation Time:</b><br>
+                                  <%=instances[x].creationDate%>
+                                </p>
+                                <button type="button" class="instanceAction">Connect</button>
+                                <button type="button" class="instanceAction">Stop</button>
+                              </div>
+                            </div>
+                          <% }} %>
+                        </div>
+                      </div>
                     </div>
-                    <div class="card-body" style="overflow-y: auto">
-                        <h4 class="card-title">Tomstack</h4>
-                        <p class="card-text">
-                            Apache Tomcat is a free and open-source implementation of the Jakarta Servlet, Jakarta Expression Language,
-                            and WebSocket technologies. Tomcat provides a "pure Java" HTTP web server environment in which Java code can run.
-                        </p>
-                    </div>
-                    <div class="card-footer" style="background: inherit; border-color: inherit;">
-                        <a href="#" class="tag">Tomcat</a>
-                        <a href="#" class="tag">MySql</a>
-                        <a href="#" class="tag">Firefox</a>
-                        <br>
-                        <a href="/launchStack?stack=TOM" class="btn btn-primary" style="display: block;">Launch</a>
-                    </div>
+                  </div>
                 </div>
-            </div>
-        </div>
+          </div>
+          <div class="col-md-8 col-sm-12">
+              <p class="banner">Choose your stack</p>
+              <div class="line"></div>
+              <div class="row pt-5 m-auto">
+                  <div class="col-md-6 col-lg-4 pb-3">
+                      <div class="card card-custom bg-white border-white border-0">
+                          <div class="card-custom-img" style="background-image: url(./img/techstack.png);"></div>
+                          <div class="card-custom-avatar">
+                              <img class="img-fluid" src="https://www.itzgeek.com/wp-content/uploads/2014/03/Tomcat-Logo.jpg"
+                                  alt="Avatar" />
+                          </div>
+                          <div class="card-body" style="overflow-y: auto">
+                              <h4 class="card-title">Tomstack</h4>
+                              <p class="card-text">
+                                  Apache Tomcat is a free and open-source implementation of the Jakarta Servlet, Jakarta Expression Language,
+                                  and WebSocket technologies. Tomcat provides a "pure Java" HTTP web server environment in which Java code can run.
+                              </p>
+                          </div>
+                          <div class="card-footer" style="background: inherit; border-color: inherit;">
+                              <a href="#" class="tag">Tomcat</a>
+                              <a href="#" class="tag">MySql</a>
+                              <a href="#" class="tag">Firefox</a>
+                              <br>
+                              <a onclick="showLoading()" href="/launchStack?stack=TOM" class="btn btn-primary" style="display: block;">Launch</a>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </div>
     </div>
 
 </body>
+<script>
+    const showLoading = () => {
+        document.getElementById("loading").style.visibility = "visible";
+    };
+</script>
 </html>
