Added blur background on loading.

--- a/myStack/admin/views/index.ejs
+++ b/myStack/admin/views/index.ejs
@@ -16,7 +16,10 @@
 </head>
 
 <body>
-    <div class="loading-div spinner-grow text-primary" id="loading"></div>
+    <div style="visibility: hidden;" id="loading">
+      <div class="blurScreen"></div>
+      <div class="loading-div spinner-grow text-primary"></div>
+    </div>
     <div class="container-fluid">
       <div class="row">
           <div class="col-md-3 col-sm-0 sideData">
