--- a/myStack/admin/public/css/index.css
+++ b/myStack/admin/public/css/index.css
@@ -134,7 +134,15 @@ html {
   height: 15em !important;
   width: 15em !important;
   z-index: 10;
-  visibility: hidden;
+}
+
+.blurScreen {
+  position: absolute;
+  width: 100%;
+  background: rgb(172, 166, 166);
+  height: 100%;
+  opacity: 0.3;
+  z-index: 2;
 }
 
 .no_instance {
@@ -240,8 +248,6 @@ html {
     text-transform: capitalize;
     margin-bottom: 1rem;
     font-size: 2.5rem;
-}
-.our_solution_content p {
 }
 
 .hover_color_bubble {
