--- a/myStack/admin/views/index.ejs
+++ b/myStack/admin/views/index.ejs
@@ -54,8 +54,8 @@
                                   <b>Creation Time:</b><br>
                                   <%=instances[x].creationDate%>
                                 </p>
-                                <button type="button" class="instanceAction">Connect</button>
-                                <button type="button" class="instanceAction">Stop</button>
+                                <button type="button" class="instanceAction" onclick='connectInstance(<%=instances[x].port%>)'>Connect</button>
+                                <button type="button" class="instanceAction" onclick='stopInstance(<%=instances[x].id%>)'>Stop</button>
                               </div>
                             </div>
                           <% }} %>
@@ -101,6 +101,24 @@
 <script>
     const showLoading = () => {
         document.getElementById("loading").style.visibility = "visible";
+    };
+
+    const connectInstance = (port) => {
+      window.location = 'http://'+window.location.hostname+':'+port;
+    };
+
+    const stopInstance = async (instanceId) => {
+      document.getElementById("loading").style.visibility = "visible";
+      fetch(`${window.location.protocol}//${window.location.hostname}:${window.location.port}/stopContainer`, {
+        method: 'POST',
+        headers: {
+          'Accept': 'application/json',
+          'Content-Type': 'application/json'
+        },
+        body: JSON.stringify({'instanceId': instanceId})
+      }).then(value => {
+        location.reload();
+      });
     };
 </script>
 </html>
