--- a/myStack/admin/views/index.ejs
+++ b/myStack/admin/views/index.ejs
@@ -16,6 +16,15 @@
 </head>
 
 <body>
+  <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+    <a class="navbar-brand" href="#">MyStack</a>
+    
+    <ul class="navbar-nav ml-auto">
+      <li class="nav-item">
+        <a class="nav-link" href="/logout">Logout</a>
+      </li>
+    </ul>
+  </nav>
     <div style="visibility: hidden;" id="loading">
       <div class="blurScreen"></div>
       <div class="loading-div spinner-grow text-primary"></div>
@@ -85,8 +94,10 @@
                           </div>
                           <div class="card-footer" style="background: inherit; border-color: inherit;">
                               <a href="#" class="tag">Tomcat</a>
+                              <a href="#" class="tag">Java</a>
                               <a href="#" class="tag">MySql</a>
-                              <a href="#" class="tag">Firefox</a>
+                              <a href="#" class="tag">Chrome</a>
+                              <a href="#" class="tag">Git</a>
                               <br>
                               <a onclick="showLoading()" href="/launchStack?stack=TOM" class="btn btn-primary" style="display: block;">Launch</a>
                           </div>
@@ -112,6 +123,7 @@
                               <a href="#" class="tag">Python</a>
                               <a href="#" class="tag">C++</a>
                               <a href="#" class="tag">C</a>
+                              <a href="#" class="tag">Git</a>
                               <br>
                               <a onclick="showLoading()" href="/launchStack?stack=CODE" class="btn btn-primary" style="display: block;">Launch</a>
                           </div>
@@ -129,7 +141,7 @@
     };
 
     const connectInstance = (port) => {
-      window.location = 'http://'+window.location.hostname+':'+port;
+      window.open('http://'+window.location.hostname+':'+port, '_blank');
     };
 
     const stopInstance = async (instanceId) => {
